--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/style.css" />
 
-    <title>React App</title>
+    <title>Long Marine Lab Stranding Map</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
