react-map-gl stylesheet

--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,9 @@
     <meta name="theme-color" content="#000000" />
 
     <link
+      href="https://api.tiles.mapbox.com/mapbox-gl-js/v1.9.1 /mapbox-gl.css"
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/instantsearch.css@7.0.0/themes/algolia-min.css"
     />
-    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/style.css" />
 
     <title>Long Marine Lab Stranding Map</title>
   </head>
